--- a/.env-shared
+++ b/.env-shared
@@ -23,6 +23,6 @@ SEARCH_FIELD=name
 SEARCH_AREA=113
 SEARCH_PER_PAGE=10
 SEARCH_ORDER_BY=publication_time
-SEARCH_DATE_TO=
+SEARCH_DATE_TO=2023-02-03 09:57:21
 
 API_PORT=8000
