--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,22 +3,27 @@ version: '3.9'
 services:
   api:
     build: client_api/
-#    restart: on-failure
     ports:
       - "${API_PORT}:${API_PORT}"
     depends_on:
       - db
     env_file:
-      - .env
-#      - .env-shared
+#      - .env
+      - .env-shared
   searcher:
     build: searcher/
-    #    restart: on-failure
     depends_on:
       - db
     env_file:
-      - .env
-#      - .env-shared
+#      - .env
+      - .env-shared
+  bot:
+    build: searcher/
+    depends_on:
+      - searcher
+    env_file:
+#      - .env
+      - .env-shared
   db:
     image: postgres:latest
     restart: on-failure
@@ -28,12 +33,12 @@ services:
 #      - ./data/db:/var/lib/postgresql/data
       - ./sql_scripts:/docker-entrypoint-initdb.d
     env_file:
-      - .env
-#      - .env-shared
+#      - .env
+      - .env-shared
   pgadmin:
     image: dpage/pgadmin4:latest
     ports:
       - "8001:80"
     env_file:
-      - .env
-#      - .env-shared
+#      - .env
+      - .env-shared
