переименования, мелкие правки

--- a/.env-shared
+++ b/.env-shared
@@ -1,21 +1,24 @@
 RUN_BY_SCHEDULE=False
 SEARCH_RUN_AT=10:00
-SEARCH_EVERY_N_DAYS=1
-SEND_MSG_AT=10:10
+SEARCH_EVERY_N_DAYS=2
+SEND_MSG_AT=18:12
 SEND_MSG_EVERY_N_DAYS=1
+
+LOG_LEVEL=info
 
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
 POSTGRES_DB=stats
 POSTGRES_USER=user
 POSTGRES_PASSWORD=pass
-LOG_LEVEL=info
+DATABASE_URL=
 
 TELEGRAM_API_TOKEN=
 TELEGRAM_CHAT_ID=
 
 PGADMIN_DEFAULT_EMAIL=user@domain.com
 PGADMIN_DEFAULT_PASSWORD=pass
+PGADMIN_PORT=8001
 
 SEARCH_URL=https://api.hh.ru
 SEARCH_TEXT=data engineer or etl or dwh or дата инженер
