правки дат и времени для диапазона поиска

--- a/.env-shared
+++ b/.env-shared
@@ -1,4 +1,4 @@
-RUN_BY_SCHEDULE=False
+RUN_BY_SCHEDULE=True
 SEARCH_RUN_AT=10:00
 SEARCH_EVERY_N_DAYS=2
 SEND_MSG_AT=18:12
@@ -18,7 +18,6 @@ TELEGRAM_CHAT_ID=
 
 PGADMIN_DEFAULT_EMAIL=user@domain.com
 PGADMIN_DEFAULT_PASSWORD=pass
-PGADMIN_PORT=8001
 
 SEARCH_URL=https://api.hh.ru
 SEARCH_TEXT=data engineer or etl or dwh or дата инженер
@@ -26,6 +25,6 @@ SEARCH_FIELD=name
 SEARCH_AREA=113
 SEARCH_PER_PAGE=10
 SEARCH_ORDER_BY=publication_time
-SEARCH_DATE_TO=2023-02-03 09:57:21
+SEARCH_DATE_TO=
 
 API_PORT=8000
