--- a/.env-shared
+++ b/.env-shared
@@ -20,7 +20,7 @@ PGADMIN_DEFAULT_EMAIL=user@domain.com
 PGADMIN_DEFAULT_PASSWORD=pass
 
 SEARCH_URL=https://api.hh.ru
-SEARCH_TEXT=data engineer or etl or dwh or дата инженер
+SEARCH_TEXT=python developer or python разработчик
 SEARCH_FIELD=name
 SEARCH_AREA=113
 SEARCH_PER_PAGE=10
